# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-ga"
version = "0.2.0"
description = "Genetic algorithm library to generate fantasy basketball lineups"
readme = "README.md"
authors = [{ name = "Kengo Arao", email = "kengo@hey.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["genetic-algorithm","fantasy-basketball"]
dependencies = [
        "numpy==1.24.2"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/KengoA/fantasy-ga"

[project.scripts]
fantasy-ga = "fantasy_ga.__main__:main"

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

